fix: create new divs

--- a/index.html
+++ b/index.html
@@ -13,22 +13,32 @@
   </head>
   <body>
     <section class="quiz-section">
-      <div class="container">
-        <h1>Javascript Quiz App 2023</h1>
+      <h1>Javascript Quiz App 2023</h1>
 
-        <div class="container_subject">
-          <p>Pick a subject</p>
-          <ul class="subjects">
-            <li class="subject">
-              Mathematics <i class="fa-solid fa-chevron-right"></i>
-            </li>
-            <li class="subject">
-              English <i class="fa-solid fa-chevron-right"></i>
-            </li>
-            <li class="subject">
-              Coding <i class="fa-solid fa-chevron-right"></i>
-            </li>
-          </ul>
+      <div class="container-subject show">
+        <p>Pick a subject</p>
+        <ul class="subjects">
+          <li class="subject">
+            <i class="fa-solid fa-chevron-right"></i>
+          </li>
+          <li class="subject"><i class="fa-solid fa-chevron-right"></i></li>
+          <li class="subject"><i class="fa-solid fa-chevron-right"></i></li>
+        </ul>
+      </div>
+      <div class="question-container">
+        <div class="question-header">
+          <p class="question"><strong>Question:</strong></p>
+          <p class="score"><strong>Score:</strong></p>
+        </div>
+        <ul class="answers">
+          <li class="option">option1</li>
+          <li class="option">option1</li>
+          <li class="option">option1</li>
+          <li class="option">option1</li>
+        </ul>
+        <div class="btns">
+          <h5 class="quit-btn">Quit</h5>
+          <h5 class="next-btn">Next</h5>
         </div>
       </div>
     </section>
