Add some buttons to next questions, revice or quit quiz

--- a/index.html
+++ b/index.html
@@ -31,15 +31,31 @@
           <p class="score"><strong>Score:</strong></p>
         </div>
         <ul class="answers">
-          <li class="option">option1</li>
-          <li class="option">option1</li>
-          <li class="option">option1</li>
-          <li class="option">option1</li>
+          <li class="option"></li>
+          <li class="option"></li>
+          <li class="option"></li>
+          <li class="option"></li>
         </ul>
         <div class="btns">
+          <h5 class="pre-btn">Previous</h5>
           <h5 class="quit-btn">Quit</h5>
           <h5 class="next-btn">Next</h5>
         </div>
+      </div>
+      <div class="result-container">
+        <div class="result">
+          <p class="final-score"><strong>Final Score:</strong> 5</p>
+        </div>
+
+        <img src="./Accepted.png" id="won" />
+        <img src="./Declined.png" id="lost" />
+        <p class="comment1">Congratulations</p>
+        <p class="comment2">would you like to retake ?</p>
+      </div>
+      <div class="decision-btns">
+        <h5 class="next-subj">Next Subject >></h5>
+        <h5 class="yes-btn">Yes</h5>
+        <h5 class="no-btn">NO</h5>
       </div>
     </section>
     <script src="app.js"></script>
