Add updated files to output results

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <section class="quiz-section">
+      <div>
       <h1>Javascript Quiz App 2023</h1>
 
       <div class="container-subject show">
@@ -62,6 +63,7 @@
           <h5 class="no-btn">NO</h5>
         </div>
       </div>
+    </div>
     </section>
     <script src="app.js"></script>
   </body>
